# subreddit-finder-using-crewai

./: README.md  leads.csv  posts_and_comments_report.md  pyproject.toml  report.md  searched_reddit.md
reddit_data/: Cricket.json
src/subreddit_finder/: crew.py  main.py
src/subreddit_finder/config/: agents.yaml  tasks.yaml
